--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,25 @@ dist: trusty
 sudo: required
 language: node_js
 node_js:
-  - "7"
-os:
-  - linux
-env:
-  global:
-    - DBUS_SESSION_BUS_ADDRESS=/dev/null
-    - DISPLAY=:99.0
-    - CHROME_BIN=chromium-browser
+  - node
+  - '12'
+
+addons:
+  chrome: stable
+
 before_script:
+  - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
+  - sleep 3
+  - fluxbox >/dev/null 2>&1 &
+
+cache:
+  directories:
+    - ./node_modules
+
 install:
-  - npm
+  - npm install
+
 script:
-  - npm run lint
-  - npm run test -- --watch=false
-  - npm run pree2e
-  - npm run e2e
-cache: npm
+  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+
