#1 anamnese page added

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,7 @@ install:
   - npm install
 
 script:
-  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run lint
+  - npm run build
+#  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
 
