--- a/angular.json
+++ b/angular.json
@@ -34,31 +34,50 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
+              "serviceWorker": false
+            },
+            "serve-aws": {
               "budgets": [
                 {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                },
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.aws.ts"
+                }
+              ],
+              "serviceWorker": false
+            },
+            "serve-local": {
+              "budgets": [
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "6kb",
-                  "maximumError": "10kb"
+                  "maximumWarning": "6kb"
                 }
-              ]
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ],
+              "serviceWorker": false
             }
           }
         },
@@ -70,6 +89,12 @@
           "configurations": {
             "production": {
               "browserTarget": "SI-Projekt-Anamnese-Web:build:production"
+            },
+            "serve-aws": {
+              "browserTarget": "SI-Projekt-Anamnese-Web:build:serve-aws"
+            },
+            "serve-local": {
+              "browserTarget": "SI-Projekt-Anamnese-Web:build:serve-local"
             }
           }
         },
