--- a/.travis.yml
+++ b/.travis.yml
@@ -1,41 +1,32 @@
-language: node_js
 dist: trusty
-
-node_js:
-  - "12"
 sudo: required
-
-env:
-  global:
-    # include $HOME/.local/bin for `aws`
-    - PATH=$HOME/.local/bin:$PATH
+language: node_js
+node_js:
+  - node
+#  - '12'
 cache:
   directories:
     - ./node_modules
-
 addons:
   chrome: stable
-
+services:
+  - docker
+before_install:
+  - docker build -t si-project-web-app-image .
 before_script:
-  - npm install -g @angular/cli
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3
+  - fluxbox >/dev/null 2>&1 &
+
+
+
+#install:
+ # - npm install
+
 script:
-  - ng lint
-  - npm run test-headless # ou ng test
-  - ng build --prod si-project-web-app-image #this can be submitted as environment variable
+  - docker run --name si-project-web-app-container -d -p 5555:80 si-project-web-app-image
+  #- npm run lint
+ # - npm run build
+#  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
 
-before_deploy:
-  - pyenv global 3.7.1
-  - pip install -U pip
-  - pip install awscli
-  # make the script executable
-  - chmod +x set_aws_credentials.sh
-  # set up temporary aws session credentials, remember to update env. variables
-  # in the file set_aws_credentials.sh in travis for every login and refresh on aws
-  - ./set_aws_credentials.sh
-
-deploy:
-  - provider: script
-    skip_cleanup: true
-    script: deploy_script.sh
-    on:
-      branch: issue-21-upload_frontend_to_aws
