--- a/.travis.yml
+++ b/.travis.yml
@@ -4,25 +4,29 @@ language: node_js
 node_js:
   - node
 #  - '12'
-
+cache:
+  directories:
+    - ./node_modules
 addons:
   chrome: stable
-
+services:
+  - docker
+before_install:
+  - docker build -t si-project-web-app-image .
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 3
   - fluxbox >/dev/null 2>&1 &
 
-cache:
-  directories:
-    - ./node_modules
 
-install:
-  - npm install
+
+#install:
+ # - npm install
 
 script:
-  - npm run lint
-  - npm run build
+  - docker run --name si-project-web-app-container -d -p 5555:80 si-project-web-app-image
+  #- npm run lint
+ # - npm run build
 #  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
 
