--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,14 @@ addons:
   chrome: stable
 services:
   - docker
-#before_install:
-#  - docker build -t si-project-web-app-image .
+before_install:
+  - docker pull node:12.7-alpine
+  - docker build -t si-project-web-app-image .
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 3
   - fluxbox >/dev/null 2>&1 &
-  - docker build -t si-project-web-app-image .
 
 
 
@@ -29,5 +29,5 @@ script:
   - docker run --name si-project-web-app-container -d -p 5555:80 si-project-web-app-image
   #- npm run lint
  # - npm run build
-#  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+#  - docker run --rm si-project-web-app-image npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
 
