--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,8 @@ before_script:
   - sleep 3
   - fluxbox >/dev/null 2>&1 &
 
-
-
-#install:
- # - npm install
-
 script:
+  - docker run --rm si-project-web-app-image npm run lint
   - docker run --name si-project-web-app-container -d -p 5555:80 si-project-web-app-image
   #- npm run lint
  # - npm run build
