--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,23 @@ script:
   #- npm run lint
  # - npm run build
 #  - docker run --rm si-project-web-app-image npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
-
+before_deploy:
+  - pyenv global 3.7.1
+  - pip install -U pip
+  - pip install awscli
+  # make the script executable
+  - chmod +x set_aws_credentials.sh
+  # set up temporary aws session credentials, remember to update env. variables
+  # in the file set_aws_credentials.sh in travis for every login and refresh on aws
+  - ./set_aws_credentials.sh
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-1"
+  app: "si-project-web-app"
+  env: "SiProjectWebApp-env"
+  bucket_name: elasticbeanstalk-us-east-1-874110563259
+  bucket_path: "si-project-web-app"
+#  access_key_id:
+#  secret_access_key:
+  on:
+    branch: issue-21-upload_frontend_to_aws
