--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,13 @@ before_script:
   - fluxbox >/dev/null 2>&1 &
 
 script:
-#  - docker run --rm si-project-web-app-image npm run lint
+  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   - docker run --name si-project-web-app-container -d -p 5555:80 si-project-web-app-image
   #- npm run lint
  # - npm run build
 #  - docker run --rm si-project-web-app-image npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
 before_deploy:
-  - pyenv install 3.6 -y
+  - pyenv install -y 3.6
   - pip install -U pip
   - pip install awscli
   # make the script executable
