--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,30 @@
-dist: trusty
-sudo: required
 language: node_js
+dist: trusty
+
 node_js:
-  - node
-#  - '12'
+  - "12"
+sudo: required
+
+env:
+  global:
+    # include $HOME/.local/bin for `aws`
+    - PATH=$HOME/.local/bin:$PATH
 cache:
   directories:
     - ./node_modules
+
 addons:
   chrome: stable
-services:
-  - docker
-before_install:
-  - docker pull node:12.7-alpine
-  - docker build -t si-project-web-app-image .
-before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - sleep 3
-  - fluxbox >/dev/null 2>&1 &
 
+before_script:
+  - npm install -g @angular/cli
 script:
-  - npm run lint
-  - docker run --name si-project-web-app-container -d -p 5555:80 si-project-web-app-image
-  #- npm run lint
- # - npm run build
-#  - docker run --rm si-project-web-app-image npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - ng lint
+  - npm run test-headless # ou ng test
+  - ng build --prod --base-href https://t-palmer.github.io/travis-demo/ #this can be submitted as environment variable
+
 before_deploy:
-  - pyenv install 3.6
+  - pyenv global 3.7.1
   - pip install -U pip
   - pip install awscli
   # make the script executable
@@ -35,14 +32,10 @@ before_deploy:
   # set up temporary aws session credentials, remember to update env. variables
   # in the file set_aws_credentials.sh in travis for every login and refresh on aws
   - ./set_aws_credentials.sh
+
 deploy:
-  provider: elasticbeanstalk
-  region: "us-east-1"
-  app: "si-project-web-app"
-  env: "SiProjectWebApp-env"
-  bucket_name: elasticbeanstalk-us-east-1-874110563259
-  bucket_path: "si-project-web-app"
-#  access_key_id:
-#  secret_access_key:
-  on:
-    branch: issue-21-upload_frontend_to_aws
+  - provider: script
+    skip_cleanup: true
+    script: deploy_script.sh
+    on:
+      branch: issue-21-upload_frontend_to_aws
