--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,8 @@ script:
   - ng build  #this can be submitted as environment variable
 
 before_deploy:
-  - pyenv install 3.7.1
-  - pyenv global 3.7.1
+ # - pyenv install 3.7.1
+ # - pyenv global 3.7.1
   - pip install -U pip
   - pip install awscli
   # make the script executable
