--- a/.travis.yml
+++ b/.travis.yml
@@ -19,14 +19,14 @@ addons:
 
 before_script:
   - npm install -g @angular/cli
+  - pyenv install 3.6.3
 script:
   #- npm run lint
   #- npm run test
   - ng build  #this can be submitted as environment variable
 
 before_deploy:
- # - pyenv install 3.7.1
- # - pyenv global 3.7.1
+  - pyenv global 3.6.3
   - pip install -U pip
   - pip install awscli
   # make the script executable
