--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: node_js
 
+
 dist: trusty
 
 node_js:
@@ -19,14 +20,16 @@ addons:
 
 before_script:
   - npm install -g @angular/cli
-  - pyenv install 3.6.3
 script:
   #- npm run lint
   #- npm run test
   - ng build  #this can be submitted as environment variable
-
+before_install:
+  - choco install python --version 3.8.0
+  - python -m pip install --upgrade pip
+  env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
 before_deploy:
-  - pyenv global 3.6.3
+  - pyenv global 3.8.0
   - pip install -U pip
   - pip install awscli
   # make the script executable
