--- a/.travis.yml
+++ b/.travis.yml
@@ -29,10 +29,16 @@ script:
 before_install:
   - choco install python --version 3.8.0
   - python -m pip install --upgrade pip
-  env: PATH=/c/Python38:/c/Python38/Scripts:$PATH
-
+install:
+  - PYENV_VERSION=1.2.20
+  - PYTHON_VERSION=3.8.7
+  - pushd $(pyenv root)
+  - git fetch
+  - git checkout v$PYENV_VERSION
+  - pyenv install -v $PYTHON_VERSION
+  - popd
 before_deploy:
-  - pyenv global 3.8.0
+  - pyenv global $PYTHON_VERSION
   - pip install -U pip
   - pip install awscli
   # make the script executable
