Fix stage deploy.script

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ before_deploy:
 deploy:
   - provider: script
     skip_cleanup: true
-    script: deploy_script.sh
+    script: scripts/deploy_script.sh
  #   wait_until_deployed: true
     on:
       branch: issue-21-upload_frontend_to_aws
