wait_until_deployed to S3 before return

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,6 @@ deploy:
   - provider: script
     skip_cleanup: true
     script: scripts/deploy_script.sh
- #   wait_until_deployed: true
+    wait_until_deployed: true
     on:
       branch: issue-21-upload_frontend_to_aws
