--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
   - sudo apt-get install -y dos2unix
 script:
   - npm run lint
-  #- npm run test
+  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   - dos2unix scripts/*
   - ng build  #this can be submitted as environment variable
 
