--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
   - sudo apt-get install -y dos2unix
 script:
   - npm run lint
-  #- npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   - dos2unix scripts/*
   - npm run build.aws  #this can be submitted as environment variable
 
@@ -43,4 +43,4 @@ deploy:
     script: scripts/deploy_script.sh
     wait_until_deployed: true
     on:
-      branch: issue-21-upload_frontend_to_aws
+      branch: master
