somes change on the travis build to point direct on AWS

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve --port 5555",
     "start.aws": "ng serve --project SI-Projekt-Anamnese-Web --configuration serve-aws --port 5555",
     "start.local": "ng serve --project SI-Projekt-Anamnese-Web --configuration serve-local --port 5555",
-    "build": "ng build",
+    "build": "ng build --project SI-Projekt-Anamnese-Web --configuration serve-aws",
+    "build.aws": "ng build --project SI-Projekt-Anamnese-Web --configuration serve-aws",
+    "build.local": "ng build --project SI-Projekt-Anamnese-Web --configuration serve-local",
     "test": "ng test",
     "test.headless": "ng test --watch=false --browsers ChromeHeadless",
     "lint": "ng lint",
