--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
   - npm run lint
   #- npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   - dos2unix scripts/*
-  - ng build  #this can be submitted as environment variable
+  - npm run build.aws  #this can be submitted as environment variable
 
 before_install:
   - pyenv global 3.7.1
