--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
   - npm install -g @angular/cli
   - sudo apt-get install -y dos2unix
 script:
- # - npm run lint
+  - npm run lint
   #- npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
   - dos2unix scripts/*
   - npm run build.aws  #this can be submitted as environment variable
